@@ -1,3 +1,8 @@
+2006-03-06  Derek Price  <derek@ximbiot.com>
+
+	* sanity.sh (death-rtag): New test.
+	(Original report from C. Michael Pilato <cmpilato@collab.net>.)
+
 2006-03-01  Derek Price  <derek@ximbiot.com>
 
 	* sanity.sh: Set MALLOC_CHECK_ in hopes of exposing common memory
